refactor(app): 优化 JSON 数据注释掉 fastjson 依赖，解析流程
- 在 build.gradle 中准备替换为 Gson
- 修改 SearchPostVm 中的 JSON 解析逻辑，使用 Gson 替代 fastjson
- 修复 Object 类型数据转换为 JSON 字符串的方法，使用 gson.toJson() 而非 toString()
- 更新 PostSearchResultAo 中的流处理方式，使用 Collectors.toList() 替代 toList()